# EcoSysX

./: .github-workflows-test.yml.example  .gitignore  3D_VISUALIZATION_IMPLEMENTATION.md  AGENTS.md  CALL_INIT_ERROR_FIX.md  CONTRIBUTING.md  CORE_ENGINE_EXTRACTION_COMPLETE.md  CRASH_ANALYSIS_SUMMARY.md  DOCS_INDEX.md  Dockerfile  ENGINE_CONFIG_FIX_QUICK_REF.md  ENGINE_CONFIG_SCHEMA_FIX.md  ENGINE_GUI_INTEGRATION_COMPLETE.md  ENGINE_INTEGRATION_COMPLETE.md  ENGINE_RACE_FIX_SUMMARY.md  FILE_STRUCTURE.md  FIX_SUMMARY.md  GensysX outline  INSTALL_WEBSOCKETS_NOW.md  INTEGRATION_IMPLEMENTATION_COMPLETE.md  LICENSE  LLAMA_INTEGRATION.md  MILESTONE_1_COMPLETE.md  MILESTONE_2_COMPLETE.md  MILESTONE_3_COMPLETE.md  MILESTONE_4_COMPLETE.md  MILESTONE_5_COMPLETE.md  MILESTONE_6_COMPLETE.md  MISSION_COMPLETE.md  PERFORMANCE_INTEGRATION_GUIDE.md  PHASE_0_COMPLETION.md  PHASE_2_INTEGRATION_COMPLETE.md  PROVIDER_FIX_COMPLETE.md  PROVIDER_TYPE_FIX.md  QT_GUI_COMPLETE_FIX.md  QT_GUI_CONFIG_FIX.md  QT_GUI_DOCKER_FIX.md  QT_GUI_REBUILD_QUICK_REF.md  QUICK_START.md  QUICK_TEST.md  (+27 more)
.github/workflows/: engine-sidecar.yml  gui.yml  provider-integration.yml  web.yml
apps/web/: index.html  package.json
apps/web/src/: App.module.css  App.tsx
apps/web/src/components/: AgentInspector.module.css  AgentInspector.tsx  Charts.module.css  Charts.tsx  ControlPanel.module.css  ControlPanel.tsx  PresetSelector.module.css  PresetSelector.tsx  SettingsPanel.module.css  SettingsPanel.tsx  SimulationCanvas.module.css  SimulationCanvas.tsx  StatsPanel.module.css  StatsPanel.tsx  Toolbar.module.css  Toolbar.tsx
apps/web/src/hooks/: useKeyboardShortcuts.ts
apps/web/src/styles/: global.css
baseline-artifacts/: README.md  v0-baseline-golden-log.md  v0-baseline-schema.json
docs/: CI_CD_INTEGRATION.md
examples/: basic.mjs
qt-gui/: .gitignore  BUILD_STATUS.md  BUILD_SUCCESS_REPORT.md  CMakeLists.txt  CMakePresets.json  CODEX_INTEGRATION_SUMMARY.md  CODING_STANDARDS.md  DESKTOP_ICON_SETUP.md  DEVELOPMENT_SETUP.md  DOCS_INDEX.md  ENGINE_FIX_DIAGRAMS.md  ENGINE_FIX_QUICK_REF.md  ENGINE_INIT_FIX.md  ENGINE_RACE_CONDITION_FIX.md  GUI_FULL_PROGRESS_UPDATE.md  GUI_TEST_SUITE.md  ICON_IMPLEMENTATION_COMPLETE.md  INSTALL_BUILD_ENVIRONMENT.md  INTEGRATION_PLAN.md  INTELLISENSE_CHECKLIST.md  INTELLISENSE_COMPLETE.md  INTELLISENSE_QUICK_REF.md  INTELLISENSE_SETUP.md  LAUNCHER_REFERENCE.md  PHASE_1_CHECKLIST.md  PHASE_1_SUMMARY.md  PHASE_2_COMPLETE_OFFICIAL.md  PHASE_2_COMPLETION.md  PHASE_2_QUICK_REFERENCE.md  PHASE_2_SUMMARY.md  PHASE_2_SUMMARY_FINAL.md  PHASE_2_VERIFICATION.md  PHASE_PROGRESS_UPDATE.md  PRIORITY_TASKS_COMPLETE.md  PROJECT_STRUCTURE.md  PROTOCOL_QUICKREF.md  QT_WEBSOCKETS_FIX.md  QUICK_REFERENCE.md  README.md  README_ALERTS.md  (+23 more)
qt-gui/docs/: 1-testing-scope.md  GETTING_STARTED.md
qt-gui/docs/architecture/: overview.md
qt-gui/resources/: resources.qrc
qt-gui/resources/icons/: README.md
qt-gui/scripts/: 1) What we’re testing (scope).cpp  build.ps1  build.sh  create_placeholder_icon.py  generate_icon.py  setup-environment.ps1
qt-gui/src/: CMakeLists.txt  main.cpp
qt-gui/src/core/: Configuration.cpp  Configuration.h  EngineClient.cpp  EngineClient.h  EngineInterface.cpp  EngineInterface.h  SnapshotBuffer.cpp  SnapshotBuffer.h
qt-gui/src/ui/: MainWindow.cpp  MainWindow.h
qt-gui/src/ui/panels/: ConfigPanel.cpp  ConfigPanel.h  EventLogPanel.cpp  EventLogPanel.h  MetricsPanel.cpp  MetricsPanel.h
qt-gui/src/ui/widgets/: MetricsChartWidget.cpp  MetricsChartWidget.h  Visualization3DWidget.cpp  Visualization3DWidget.h  VisualizationWidget.cpp  VisualizationWidget.h
qt-gui/src/utils/: ValidationUtils.h
qt-gui/tests/: CMakeLists.txt  README.md
qt-gui/tests/fixtures/: sample_config.json  test-engine-stub.mjs
qt-gui/tests/integration/: tst_engine_integration.cpp  tst_mainwindow_integration.cpp
qt-gui/tests/unit/: tst_configuration.cpp  tst_configuration_example.cpp  tst_engineclient.cpp  tst_snapshotbuffer.cpp  tst_validation_utils.cpp
scripts/: build-all.ps1  build-all.sh  clean-all.ps1  clean-all.sh  generate-golden-log.mjs  test-all.ps1  test-all.sh  update_export.py
services/agents-sidecar/: Dockerfile  Manifest.toml  Project.toml  README.md  engine_agents.jl  main.jl
services/engine-sidecar/: Dockerfile  INTEGRATION.md  README.md  main.js  package-lock.json  package.json  test.js
services/llama-service/: Dockerfile  README.md  llama_server.py  requirements.txt  start.bat  start.sh  test_service.py
services/mason-sidecar/: Dockerfile  README.md  pom.xml
services/mason-sidecar/src/main/java/org/ecosysx/mason/: EcosystemAgent.java  EcosystemModel.java  MasonEngine.java  MasonSidecar.java
services/mesa-sidecar/: Dockerfile  engine_mesa.py  main.py  requirements.txt
src/: App.jsx  DiagnosticApp.jsx  EcosystemSimulator.jsx  GPUComputeSystem.js  GPUMemoryManager.js  HighPerformanceEcosystemIntegration.js  InstancedAgentRenderer.js  LLMService.js  NewApp.jsx  PerformanceMonitoringDashboard.jsx  PerformanceSystemTest.js  ProgressiveScalingPanel.jsx  SimpleTestApp.jsx  SimpleTestApp.jsx.backup  TestComponent.jsx  index.css  main.jsx
src/components/: SimulationControlPanel.jsx
src/core/: AgentClasses.js  AgentClasses.test.js  EcosystemEngine.js  EcosystemEngine.test.js  Environment.js
src/hooks/: useEngine.js
src/services/: EngineService.js
src/ui/: EcosystemUI.jsx
test/: setup.js
test/examples/: component.test.example.jsx
test/integration/: engine-server.test.js
